# VivaEvents

./: .env  app.py  app2.py  app4.py  create_bd.sql  dd.py  flask_app.py  package-lock.json  pyproject.toml  setup_mysql.sql  si.html
form/: login.py  registration.py
models/: base_models.py
old/: base.html  cart.html  checkout.html  event.html  index.css  index.html  landing_page.html  login.html  output.css  output.css.map  signup.html  style.scss  th.html
static/: styles.css
static/images/: 24x24.pngZone.Identifier
templates/: landing_page.html  login.html  signup.html
