[tool.poetry]
name = "event"
version = "0.1.0"
description = "An event-booking website"
authors = ["Domengo <dominicsengo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"  # Add any other dependencies you need

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
